<?xml version="1.0"?>
<package>
  <name>rosjava_tutorial_java_msgs</name>
  <version>0.1.0</version>
  <description>The rosjava_tutorial_java_msgs package</description>
  <maintainer email="woj@todo.todo">woj</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>rosjava_tutorial_msgs</build_depend>

  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>genjava</run_depend>
</package>
